@@ -68,6 +68,7 @@ typedef CTX* Fl__NiceSlider;
 typedef CTX* Fl__HorNiceSlider;
 typedef CTX* Fl__HorSlider;
 typedef CTX* Fl__Scrollbar;
+typedef CTX* Fl__ValueSlider;
 
 
 
